# eden

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
cmake/emake/: CMakeLists.txt  import.cmake
cmake/emake/framework/: import.cmake  setup.cmake
cmake/emake/framework/modules/: EMakeLogF.cmake  EMakeParseArguments.cmake  EMakeProjectM.cmake  EMakeSetupConfigM.cmake  EMakeSubSystemM.cmake  EMakeUtilsF.cmake  EmakeFramework.cmake
cmake/emake/subsystem/ebuild/: export.cmake  setup.cmake
cmake/emake/subsystem/eoprt/: import.cmake  setup.cmake
cmake/emake/subsystem/etest/: import.cmake
cmake/emake/testing/ebuild_create/: CMakeLists.txt
cmake/emake/testing/framework/: CMakeLists.txt
emake/: CMakeLists.txt  import.cmake  readme.md
emake/framework/: export.cmake  setup.cmake
emake/framework/modules/: EMakePropertyM.cmake  EMakeSetBuildTypeM.cmake  EMakeSetupBuildEnvM.cmake  EMakeUtilsF.cmake
emake/framework/sbin/: checkos.sh
emake/subsystem/ebuild/: import.cmake
emake/subsystem/ebuild/modules/: EBuildControl.cmake  EBuildDependsM.cmake  EBuildExecExtM.cmake  EBuildExecProdM.cmake  (+6 more)
emake/subsystem/eoprt/: EOprtAddF.cmake  export.cmake
emake/subsystem/etest/: export.cmake
src/exts/cnats/: CMakeLists.txt
src/exts/libuv/: CMakeLists.txt
src/exts/pthreads-win32/: CMakelists.txt
src/exts/winpthreads/: CMakeLists.txt
src/exts/winpthreads/winpthreads/: CMakeLists.txt  config.h
src/exts/winpthreads/winpthreads/include/: pthread.h
src/exts/winpthreads/winpthreads/src/: misc.c  mutex.c  spinlock.c  thread.c
src/libs/etk/: CMakeLists.txt
(+367 files in other folders)
